--- a/app/templates/git/new.html
+++ b/app/templates/git/new.html
@@ -1,4 +1,6 @@
 {%  extends "index.template.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
+
 
 {%  block content %}
     <div class="container">
@@ -9,7 +11,7 @@
                     New Deployment Hook
                 </div>
                 <div class="card-body">
-
+                    {{ wtf.quick_form(form)  }}
                 </div>
                 </div>
             </div>
