--- a/app/templates/git/list.html
+++ b/app/templates/git/list.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{%  extends "index.template.html" %}
+
+{%  block content %}
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="card">
+                <div class="card-header">
+                    Deployment Hook
+                </div>
+                <div class="card-body">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Name</th>
+                          <th scope="col"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      {% for hook in hooks %}
+                          <tr>
+                            <th scope="col">{{ hook.id }}</th>
+                            <th scope="col"><a href="{{ url_for('git_webhook.edit_git_hook', id=hook.id) }}">{{ hook.name }}</a></th>
+                            <th scope="col"></th>
+                          </tr>
+                      {% endfor %}
+                      </tbody>
+                    </table>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
