--- a/app/templates/git/edit.html
+++ b/app/templates/git/edit.html
@@ -8,7 +8,7 @@
             <div class="col-md-auto">
                 <div class="card">
                 <div class="card-header">
-                    New Deployment Hook
+                    Hook - {{ hook.name }}
                 </div>
                 <div class="card-body">
                     {{ wtf.quick_form(form)  }}
