--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,12 +8,10 @@
             <div class="col-md-auto">
                 <div class="card">
                 <div class="card-header">
-                    Login
+                    Register
                 </div>
                 <div class="card-body">
                     {{ wtf.quick_form(form)  }}
-                    <br />
-                    <p>New User? <a href="{{ url_for('index.register') }}">Click to Register!</a></p>
                 </div>
                 </div>
             </div>
